# unit-test-bootcamp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  memo.md  pyproject.toml  report.md
.claude/: settings.json
.claude/rules/: general.md  testing.md
.github/workflows/: ci.yml
src/poker/: __main__.py  card.py  deck.py  evaluator.py  game.py
tests/: test_evaluator.py
