[project]
name = "unit-test-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dk-morinibu", email = "takeshi.morinibu@daikin.co.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "poker"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
